--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
